[package]
name = "day3"
version = "0.1.0"
authors = ["loara <loarabia@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde_scan = "0.3.2"
# serde = "1.0.103"
# serde_derive = "1.0.103"
regex = "1.3.1"